Update club website

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </br>
         <footer>
             <div id="footer">
-                <a href="https://linktr.ee/ignites_students_club">&copy; Microsoft Ignite Students Club</a>
+                <a href="https://ignitestudents.club">&copy; Microsoft Ignite Students Club</a>
             </div>
         </footer>
     </main>
