--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
     <script>
         // --- CONFIGURATION ---
         const BACKEND_BASE_URL = 'https://prisonctf-gha9e7h6ffctgnh7.centralus-01.azurewebsites.net'; 
-        const REPO_URL_BASE = 'https://raw.githubusercontent.com/shreyasd2006/prisonCTF/main'; // Changed to your fork
+        // --- THIS LINE HAS BEEN CORRECTED WITH YOUR URL ---
+        const REPO_URL_BASE = 'https://raw.githubusercontent.com/shreyasd2006/prisonCTF-backend/main';
         const TOTAL_PROBLEMS = 10; 
 
         // --- STATE MANAGEMENT ---
