updated index name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrisonCTF - Coding Competition</title>
+    <title>Ignite CTF - Coding Competition</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
@@ -80,7 +80,7 @@
     <!-- Main Content -->
     <div id="main-content" class="hidden">
         <header class="bg-gray-800 p-4 shadow-lg flex justify-between items-center sticky top-0 z-10">
-            <h1 class="text-2xl font-bold text-cyan-400">PrisonCTF</h1>
+            <h1 class="text-2xl font-bold text-cyan-400">Ignite CTF</h1>
             <div class="flex items-center space-x-4">
                  <p id="user-info" class="text-lg"></p>
                  <button id="logout-btn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-3 rounded-lg transition-colors">Logout</button>
